package Builder.Cars;


/**
 * Tipos de auto disponibles en el sistema.
 */
public enum CarType {
    CITY_CAR,
    SPORTS_CAR,
    SUV
}