package Builder.Components;

/**
 * Tipos de transmisión disponibles.
 */
public enum Transmission {
    SINGLE_SPEED,
    MANUAL,
    AUTOMATIC,
    SEMI_AUTOMATIC
}